src/feature/area/widget/AreaWidget/AreaWidget.module.scss
.AreaWidget {
    pointer-events: auto;
    position: absolute;
    width: fit-content;
    height: fit-content;

    > svg {
        position: absolute;
        transform: translate(-50%, -50%);
    }

    &:global(.Selected) {
        circle {
            fill: red;
        }

        polygon {
            stroke: red;
            stroke-dasharray: 8 4;
            stroke-width: 2px;
        }
    }

    .Info {
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);

        background: var(--white);
        padding: 20px;
        border-radius: 8px;

        width: 400px;

        display: flex;
        flex-direction: column;
        gap: 20px;

        box-shadow: 0px 2px 8px 2px hsla(0, 0%, 20%, 0.4);

        &:after {
            content: "";
            width: 0px;
            height: 0px;
            position: absolute;
            border-left: 10px solid transparent;
            border-right: 10px solid transparent;
            border-top: 10px solid #fff;
            border-bottom: 10px solid transparent;
            left: 50%;
            top: 100%;
            transform: translate(-50%, -1%);
        }

        .Text {}

        .Graphic {
            width: 100%;
            height: auto;
        }
    }

    
}

